03-agc-for-containers/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    demo: agc-containers
