03-agc-for-containers/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agc-demo-service
  namespace: default
  labels:
    app: agc-demo-app
    demo: agc-containers
spec:
  type: ClusterIP
  selector:
    app: agc-demo-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
