03-agc-for-containers/kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agc-demo-route
  namespace: default
  labels:
    demo: agc-containers
spec:
  parentRefs:
  - name: agc-demo-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: agc-demo-service
      port: 80
